--- a/src/oddly-cubes/dev.pug
+++ b/src/oddly-cubes/dev.pug
@@ -1,7 +1,8 @@
 .container
   - for (let l = 0; l < 3; l++)
-    .layer
-      - for(let c = 0; c < 3; c++)
-        .column
-          - for(let c = 0; c < 3; c++)
-            .cube
+    .layer__wrapper
+      .layer
+        - for(let c = 0; c < 3; c++)
+          .column
+            - for(let c = 0; c < 3; c++)
+              .cube
