--- a/src/grid-gallery-showcase/style.styl
+++ b/src/grid-gallery-showcase/style.styl
@@ -3,9 +3,14 @@
   animation  fadeIn .5s
 
 body
-  background-color #e74c3c
-  color            #fafafa
-  text-align       center
+  background       linear-gradient(65deg, black, black 20%, rebeccapurple)
+  display          grid
+  width            100vw
+  padding-top      20px
+  margin           0
+  @media(min-width 768px)
+    align-content center
+    padding       20px
 
 @keyframes fadeIn
   from
@@ -13,28 +18,55 @@ body
   to
     opacity 1
 
+img
+  height 100%
+  width 100%
+  min-height 50px
+  object-fit cover
+
 
 .gallery
-  background-color blue
-  height 400px
   display grid
-  grid-gap 10px
-  grid-template-columns repeat(5, 1fr)
-  grid-template-rows repeat(3, 1fr)
-  grid-template-areas 'left left active right right' 'left left active right right' 'left left active right right'
-  width 400px
+  justify-content center
+  grid-gap 20px
+  grid-template-columns repeat(2, 100px) minmax(200px, 800px) repeat(2, 100px)
+  grid-template-rows repeat(5, 100px)
+
+  @media(max-width 768px)
+    grid-gap 10px
+    grid-template-columns repeat(auto-fit, 50px)
+    grid-template-rows 300px repeat(auto-fit, 50px)
+
+  &__filler
+    grid-column span 2
+    @media(max-width 768px)
+      display none
 
   &__item
-    border 1px solid #fff
-    grid-area item
-    grid-row span 1fr
-    grid-column span 1fr
+    cursor pointer
+    border-radius 5px
+    grid-row span 1
+    grid-column span 1
+    transition transform 0.1s ease-in-out
 
-    &:nth-child(even)
-      grid-area left
+    &:hover
+      transform scale(1.1) rotate(5deg)
 
-    &:nth-child(odd)
-      grid-area right
+  &__select
+    display none
 
-    &--active
-      grid-area active !important
+  for $select in (1..13)
+    &__select:nth-of-type({$select})
+      &:checked ~ .gallery .gallery__item:nth-of-type({$select})
+        cursor default
+        display grid
+        align-items center
+        grid-row 1 / -1
+        grid-column 3
+
+        &:hover
+          transform none
+
+        @media(max-width 768px)
+          grid-row 1 / -3
+          grid-column 1 / -1
