--- a/src/opacity-word-loader/index.pug
+++ b/src/opacity-word-loader/index.pug
@@ -1,3 +1,13 @@
-extends ../../boilerplate/layout.boilerplate.pug
-block content
-  include dev.pug
+html
+  head
+    meta(charset="utf-8")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
+    title Some cool pen
+    meta(name="viewport", content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1.0")
+    link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1", crossorigin="anonymous")
+    link(rel='stylesheet', href='style.css')
+  body
+    block content
+      include dev.pug
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.9/vue.js")
+    script(src="script.js")
