Add overlap height for pseudo text in opacity-word-loader

--- a/src/opacity-word-loader/style.styl
+++ b/src/opacity-word-loader/style.styl
@@ -42,6 +42,8 @@ input
     position absolute
     left 50%
     top 50%
+    height 100%
+    width  100%
     transform translate(-50%, -50%)
 
   &:before
