--- a/src/non-moving-square-illusion/dev.pug
+++ b/src/non-moving-square-illusion/dev.pug
@@ -1,3 +1,5 @@
-.container
-  - for(let c = 0; c < 48; c++)
-    .circle
+.square
+  - for(let e = 0; e < 4; e++)
+    .edge
+      - for(let c = 0; c < 7; c++)
+        .circle
