--- a/src/non-moving-square-illusion/style.styl
+++ b/src/non-moving-square-illusion/style.styl
@@ -18,13 +18,13 @@ $circleSize = $size / 15
   0%
     background-position center center
   100%
-    background-position center 200%
+    background-position center 170%
 
 @keyframes moveBgTwo
   0%
     background-position center center
   100%
-    background-position center 150%
+    background-position center 140%
 
 @keyframes moveBgThree
   0%
@@ -61,16 +61,17 @@ $circleSize = $size / 15
 
 .circle
   background-color #fff
-  background repeating-linear-gradient(0deg, black, black 10%, white 10%, white 20%)
-  background-size $circleSize ($circleSize * 2)
+  background repeating-linear-gradient(0deg, black, black 20%, white 20%, white (20 + 10 + (10 / 3) * 1%), black (20 + 10 + (10 / 3) * 1%))
+  background-size 100% 250%
   border-radius 100%
   height $circleSize
   width $circleSize
   margin-left $circleSize
-  animation-duration 1s
+  animation-duration .75s
   animation-timing-function linear
   animation-direction alternate-reverse
   animation-iteration-count infinite
+  background-position 0 65%
 
   // Just create four rows and place them around the square???
   for $circle in (1..7)
