--- a/src/cssarousel/style.styl
+++ b/src/cssarousel/style.styl
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:900');
 /**
   * style variables
 */
@@ -137,8 +138,10 @@ $slideTransition       = .5s
 *
   box-sizing border-box
 
+html
 body
    background-color #111
+   font-family 'Roboto', sans-serif
    text-align       center
    color white
 
