--- a/src/react-context-16.3/style.styl
+++ b/src/react-context-16.3/style.styl
@@ -1,9 +1,19 @@
+@import url('https://fonts.googleapis.com/css?family=Gloria+Hallelujah');
+
 *
   box-sizing border-box
 
 body
+  background #7ec0ee
   margin 0
   padding 0
   height 100vh
   width 100vw
   overflow hidden
+  display flex
+  align-items center
+  justify-content center
+  font-size 3rem
+  font-family 'Gloria Hallelujah', cursive
+  font-weight bold
+  color #fafafa
