--- a/src/smash-bros-is-coming/style.styl
+++ b/src/smash-bros-is-coming/style.styl
@@ -52,7 +52,7 @@ body
 .reveal
   height 100vh
   width 100vw
-  background linear-gradient(60deg, black, black 45%, transparent 49%, transparent 51%, black 55%)
+  background linear-gradient(60deg, rgba(0, 0, 0, 0.95), rgba(0, 0, 0, 0.95) 42%, rgba(0, 0, 0, 0.75) 49%, rgba(0, 0, 0, 0.65) 51%, rgba(0, 0, 0, 0.95) 57%)
   position absolute
   opacity 1
   background-size 300% 100%
