--- a/src/poetry-grabber/index.pug
+++ b/src/poetry-grabber/index.pug
@@ -10,5 +10,6 @@ html
       include dev.pug
     script(crossorigin, src="https://unpkg.com/react@16.3.0-alpha.1/umd/react.development.js")
     script(crossorigin, src="https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js")
     script(src="https://unpkg.com/styled-components/dist/styled-components.min.js")
     script(src="script.js")
