--- a/src/masonry-image-gallery/style.styl
+++ b/src/masonry-image-gallery/style.styl
@@ -28,6 +28,7 @@ $config = {
 .masonry-panel
   order      1
   overflow    hidden
+  max-height 100vh
   transition all .25s ease 0s
   width      100%
 
