--- a/src/poetry-grabber/index.pug
+++ b/src/poetry-grabber/index.pug
@@ -8,6 +8,7 @@ html
   body
     block content
       include dev.pug
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js")
     script(crossorigin, src="https://unpkg.com/react@16.3.0-alpha.1/umd/react.development.js")
     script(crossorigin, src="https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js")
