--- a/src/poetry-grabber/index.pug
+++ b/src/poetry-grabber/index.pug
@@ -11,6 +11,6 @@ html
     script(src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js")
     script(crossorigin, src="https://unpkg.com/react@16.3.0-alpha.1/umd/react.development.js")
     script(crossorigin, src="https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js")
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js")
-    script(src="https://unpkg.com/styled-components/dist/styled-components.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/plugins/TextPlugin.min.js")
     script(src="script.js")
