--- a/src/vue-mail-app/index.pug
+++ b/src/vue-mail-app/index.pug
@@ -12,4 +12,5 @@ html
     script(src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.9/vue.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/Faker/3.1.0/faker.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.21.0/moment.min.js")
     script(src="script.js")
