Implement pac-man-password

--- a/src/pac-man-password/dev.pug
+++ b/src/pac-man-password/dev.pug
@@ -1,4 +1,6 @@
 .pac-input
-  input(type='password', value='password')
+  input(type='password', value='chomprulz')
   a.pac-input__pac
   a.pac-input__ghost
+    .pac-input__ghost-eyes
+  .pac-input__cloak
